<resources>
    <string name="app_name">Omega Bot</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Регистрация</string>
    <string name="action_log_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notifications">Уведомления</string>
    <string name="menu_robot_manager">Устройства</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="menu_code">Программирование</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_home">Управление</string>
    <string name="sign_in">Регистрация</string>
    <string name="log_in">Вход</string>
    <string name="leftbutton">leftButton</string>
    <string name="topbutton">topButton</string>
    <string name="bottombutton">bottomButton</string>
    <string name="rightbutton">rightButton</string>
    <string name="blankbutton">blankButton</string>
</resources>