<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.omegajoy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_code"
            app:destination="@id/nav_code" />
    </fragment>

    <fragment
        android:id="@+id/nav_code"
        android:name="com.example.omegajoy.ui.code.CodeFragment"
        android:label="@string/menu_code"
        tools:layout="@layout/fragment_code" >
        <action
            android:id="@+id/action_nav_code_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_robot_manager"
        android:name="com.example.omegajoy.ui.robotmanager.RobotManagerFragment"
        android:label="@string/menu_robot_manager"
        tools:layout="@layout/fragment_robot_manager" >
        <action
            android:id="@+id/action_nav_robot_manager_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.omegajoy.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_nav_notifications_to_nav_code"
            app:destination="@id/nav_code" />
        <action
            android:id="@+id/action_nav_notifications_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.omegajoy.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_nav_settings_to_nav_code"
            app:destination="@id/nav_code" />
        <action
            android:id="@+id/action_nav_settings_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>